Se actualizó el mensaje

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="app">
-            <h1>Do you love me?</h1>
+            <h1>Quieres ser mi San Valentín?</h1>
             <button id="btnSi">Yes</button>
             <button id="btnNo" class="posicion1">No</button>
         </div>
