--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>XyM San Valentín</title>
         <link rel="stylesheet" href="./styles.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     </head>
     <body>
         <div class="app">
-            <h1>Quieres ser mi San Valentín?</h1>
-            <button id="btnSi">Yes</button>
-            <button id="btnNo" class="posicion1">No</button>
+            
+                <h1>Quieres ser mi San Valentín?</h1>
+                <div class="botones">
+                    <button id="btnSi" class="btn">SÍ</button>
+                    <button id="btnNo" class="posicion1 btn">NO</button>
+                </div>
+            
         </div>
 
         <script src="./app.js"></script>
