--- a/acepto.html
+++ b/acepto.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="./styles.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     </head>
-    <body>
-        <div class="container">
+    <body class="bodyAcepto">
+        <div class="app">
             <h1>TE AMO</h1>
         </div>
         <!--Carussel-->
@@ -21,13 +21,13 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="img/1.jpg" alt="First slide">
+                <img class="d-block w-100 imgCarrusel" src="img/1.jpg" alt="First slide" >
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="img/2.jpg" alt="Second slide">
+                <img class="d-block w-100 imgCarrusel" src="img/2.jpg" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="img/3.jpg" alt="Third slide">
+                <img class="d-block w-100 imgCarrusel" src="img/3.jpg" alt="Third slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
