--- a/acepto.html
+++ b/acepto.html
@@ -13,7 +13,8 @@
             <h1>TE AMO</h1>
         </div>
         <!--Carussel-->
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <div class="centrar">
+        <div id="carouselExampleIndicators" class="carousel slide carrusel" data-ride="carousel">
             <ol class="carousel-indicators">
               <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
               <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -39,6 +40,7 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
+        </div>
 
           <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
           <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
