--- a/acepto.html
+++ b/acepto.html
@@ -15,14 +15,13 @@
         <!--Carussel-->
         <div class="centrar">
         <div id="carouselExampleIndicators" class="carousel slide carrusel" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
+            
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img class="d-block w-100 imgCarrusel" src="img/1.jpg" alt="First slide" >
+                <div class="carousel-caption d-none d-md-block imgLetras">
+                  <h5>Esta pq la amé desde el primer momento que la ví</h5>
+                </div>
               </div>
               <div class="carousel-item">
                 <img class="d-block w-100 imgCarrusel" src="img/2.jpg" alt="Second slide">
