--- a/acepto.html
+++ b/acepto.html
@@ -13,32 +13,126 @@
             <h1>TE AMO</h1>
         </div>
         <!--Carussel-->
-        <div class="centrar">
-        <div id="carouselExampleIndicators" class="carousel slide carrusel" data-ride="carousel">
-            
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100 imgCarrusel" src="img/1.jpg" alt="First slide" >
-                <div class="carousel-caption d-none d-md-block imgLetras">
-                  <h5>Esta pq la amé desde el primer momento que la ví</h5>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100 imgCarrusel" src="img/2.jpg" alt="Second slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100 imgCarrusel" src="img/3.jpg" alt="Third slide">
-              </div>
+        <div class="">
+        <div class="row container-fluid zonaCartas">
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+            <img class="card-img-top imgCar" src="img/1.jpg" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
           </div>
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+            <img class="card-img-top imgCar" src="img/2.jpg" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+            <img class="card-img-top imgCar" src="img/3.jpg" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+            <img class="card-img-top imgCar" src="img/4.jpg" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+            <img class="card-img-top imgCar" src="img/5.jpg" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+            <img class="card-img-top imgCar" src="img/6.jpg" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+            <img class="card-img-top imgCar" src="img/7.jpg" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+            <img class="card-img-top imgCar" src="img/8.jpg" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+            <img class="card-img-top imgCar" src="img/9.jpg" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+            <img class="card-img-top imgCar" src="img/10.jpg" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+            <img class="card-img-top imgCar" src="img/11.jpg" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+            <img class="card-img-top imgCar" src="img/12.jpg" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+            <img class="card-img-top imgCar" src="img/13.jpg" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+            <img class="card-img-top imgCar" src="img/14.jpg" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+            <img class="card-img-top imgCar" src="img/15.jpg" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+            <img class="card-img-top imgCar" src="img/16.jpg" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+            <img class="card-img-top imgCar" src="img/17.jpg" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+            <img class="card-img-top imgCar" src="img/18.jpg" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+            <img class="card-img-top imgCar" src="img/19.jpg" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+
+
+          
+        </div>
         </div>
 
           <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
