--- a/acepto.html
+++ b/acepto.html
@@ -13,120 +13,120 @@
             <h1>TE AMO</h1>
         </div>
         <!--Carussel-->
-        <div class="">
+        <div class="zonaCartas">
         <div class="row container-fluid zonaCartas">
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/1.jpg" alt="Card image cap">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Esta pq la amé desde el primer momento q la ví</p>
             </div>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/2.jpg" alt="Card image cap">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">esta pq MIRA COMO ME MIRAS</p>
             </div>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/3.jpg" alt="Card image cap">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">esta pq q lindota miamor</p>
             </div>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/4.jpg" alt="Card image cap">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">AAAAAH</p>
             </div>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/5.jpg" alt="Card image cap">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">esta pq mi lugar favorito para estar eres tú</p>
             </div>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/6.jpg" alt="Card image cap">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">esta pq te ves toda tierna toda lindota toda miamor te beso todo el día</p>
             </div>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/7.jpg" alt="Card image cap">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">esta pq me da risa nuestras caras</p>
             </div>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/8.jpg" alt="Card image cap">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">esta pq lit somos, tú la hello kitty y yo el spaiderman</p>
             </div>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/9.jpg" alt="Card image cap">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">esta pq me mama duro</p>
             </div>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/10.jpg" alt="Card image cap">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">esta pq está bien bonita y tus cachetes se ven increíbles</p>
             </div>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/11.jpg" alt="Card image cap">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">esta pq te siento así como cuando ponen la mano y la otra persona pone su cara me encanta!</p>
             </div>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/12.jpg" alt="Card image cap">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">esta pq quería mucho una así contigo miamor</p>
             </div>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/13.jpg" alt="Card image cap">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">esta pq es mi fav de favs, me mama bn duro así como me mamas tú miamorsote</p>
             </div>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/14.jpg" alt="Card image cap">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">esta pq sales bn LINDOTA chula te amo</p>
             </div>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/15.jpg" alt="Card image cap">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">me gusta como se ven nuestros ojitos</p>
             </div>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;;">
             <img class="card-img-top imgCar" src="img/16.jpg" alt="Card image cap">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">esta pq estamos riendonos los dos</p>
             </div>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/17.jpg" alt="Card image cap">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">esta pq me encanta como se siente tocar nuestras lenguas mutuamente</p>
             </div>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/18.jpg" alt="Card image cap">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">esta pq sacamos la lengua al mismo tiempo jsjsj</p>
             </div>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 18rem;">
+          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/19.jpg" alt="Card image cap">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">y esta pq estaba extremadamente feliz!</p>
             </div>
           </div>
 
