Completo y con frase

--- a/acepto.html
+++ b/acepto.html
@@ -11,6 +11,7 @@
     <body class="bodyAcepto">
         <div class="app">
             <h1>TE AMO</h1>
+            <p>profundamente y sin ninguna restricción</p>
         </div>
         <!--Carussel-->
         <div class="zonaCartas">
