se añadio efecto polaroid

--- a/acepto.html
+++ b/acepto.html
@@ -16,25 +16,25 @@
         <!--Carussel-->
         <div class="zonaCartas">
         <div class="row container-fluid zonaCartas">
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
+          <div class="card contenedorTarjeta RotarIzq" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/1.jpg" alt="Card image cap">
             <div class="card-body">
               <p class="card-text">Esta pq la amé desde el primer momento q la ví</p>
             </div>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
+          <div class="card contenedorTarjeta RotarDer" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/2.jpg" alt="Card image cap">
             <div class="card-body">
               <p class="card-text">esta pq MIRA COMO ME MIRAS</p>
             </div>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
+          <div class="card contenedorTarjeta RotarIzq" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/3.jpg" alt="Card image cap">
             <div class="card-body">
               <p class="card-text">esta pq q lindota miamor</p>
             </div>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
+          <div class="card contenedorTarjeta RotarDer" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/4.jpg" alt="Card image cap">
             <div class="card-body">
               <p class="card-text">AAAAAH</p>
