--- a/acepto.html
+++ b/acepto.html
@@ -21,118 +21,134 @@
             <div class="card-body">
               <p class="card-text">Esta pq la amé desde el primer momento q la ví</p>
             </div>
+            <img class="icono " src="icons/mascotas.png"/>
           </div>
           <div class="card contenedorTarjeta RotarDer" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/2.jpg" alt="Card image cap">
             <div class="card-body">
               <p class="card-text">esta pq MIRA COMO ME MIRAS</p>
             </div>
+            <img class="icono " src="icons/gatotriste.png"/>
           </div>
           <div class="card contenedorTarjeta RotarIzq" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/3.jpg" alt="Card image cap">
             <div class="card-body">
               <p class="card-text">esta pq q lindota miamor</p>
             </div>
+            <img class="icono " src="icons/sonrisa.png"/>
           </div>
           <div class="card contenedorTarjeta RotarDer" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/4.jpg" alt="Card image cap">
             <div class="card-body">
               <p class="card-text">AAAAAH</p>
             </div>
+            <img class="icono " src="icons/cupido.png"/>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
+          <div class="card contenedorTarjeta RotarIzq" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/5.jpg" alt="Card image cap">
             <div class="card-body">
               <p class="card-text">esta pq mi lugar favorito para estar eres tú</p>
             </div>
+            <img class="icono " src="icons/lugar-seguro.png"/>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
+          <div class="card contenedorTarjeta RotarDer" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/6.jpg" alt="Card image cap">
             <div class="card-body">
               <p class="card-text">esta pq te ves toda tierna toda lindota toda miamor te beso todo el día</p>
             </div>
+            <img class="icono " src="icons/cute.png"/>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
+          <div class="card contenedorTarjeta RotarIzq" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/7.jpg" alt="Card image cap">
             <div class="card-body">
               <p class="card-text">esta pq me da risa nuestras caras</p>
             </div>
+            <img class="icono " src="icons/enamorados.png"/>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
+          <div class="card contenedorTarjeta RotarDer" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/8.jpg" alt="Card image cap">
             <div class="card-body">
               <p class="card-text">esta pq lit somos, tú la hello kitty y yo el spaiderman</p>
             </div>
+            <img class="icono " src="icons/helloKitty.png"/>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
+          <div class="card contenedorTarjeta RotarIzq" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/9.jpg" alt="Card image cap">
             <div class="card-body">
               <p class="card-text">esta pq me mama duro</p>
             </div>
+            <img class="icono " src="icons/gustar.png"/>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
+          <div class="card contenedorTarjeta RotarDer" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/10.jpg" alt="Card image cap">
             <div class="card-body">
               <p class="card-text">esta pq está bien bonita y tus cachetes se ven increíbles</p>
             </div>
+            <img class="icono " src="icons/brillos.png"/>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
+          <div class="card contenedorTarjeta RotarIzq" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/11.jpg" alt="Card image cap">
             <div class="card-body">
               <p class="card-text">esta pq te siento así como cuando ponen la mano y la otra persona pone su cara me encanta!</p>
             </div>
+            <img class="icono " src="icons/corazon.png"/>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
+          <div class="card contenedorTarjeta RotarDer" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/12.jpg" alt="Card image cap">
             <div class="card-body">
               <p class="card-text">esta pq quería mucho una así contigo miamor</p>
             </div>
+            <img class="icono " src="icons/foto.png"/>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
+          <div class="card contenedorTarjeta RotarIzq" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/13.jpg" alt="Card image cap">
             <div class="card-body">
               <p class="card-text">esta pq es mi fav de favs, me mama bn duro así como me mamas tú miamorsote</p>
             </div>
+            <img class="icono " src="icons/amar.png"/>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
+          <div class="card contenedorTarjeta RotarDer" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/14.jpg" alt="Card image cap">
             <div class="card-body">
               <p class="card-text">esta pq sales bn LINDOTA chula te amo</p>
             </div>
+            <img class="icono " src="icons/amor.png"/>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
+          <div class="card contenedorTarjeta RotarIzq" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/15.jpg" alt="Card image cap">
             <div class="card-body">
               <p class="card-text">me gusta como se ven nuestros ojitos</p>
             </div>
+            <img class="icono " src="icons/ojos.png"/>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;;">
+          <div class="card contenedorTarjeta RotarDer" style="width: 20rem;;">
             <img class="card-img-top imgCar" src="img/16.jpg" alt="Card image cap">
             <div class="card-body">
               <p class="card-text">esta pq estamos riendonos los dos</p>
             </div>
+            <img class="icono " src="icons/reir.png"/>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
+          <div class="card contenedorTarjeta RotarIzq" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/17.jpg" alt="Card image cap">
             <div class="card-body">
               <p class="card-text">esta pq me encanta como se siente tocar nuestras lenguas mutuamente</p>
             </div>
+            <img class="icono " src="icons/gatito.jpg" style="border-radius: 2px;"/>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
+          <div class="card contenedorTarjeta RotarDer" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/18.jpg" alt="Card image cap">
             <div class="card-body">
               <p class="card-text">esta pq sacamos la lengua al mismo tiempo jsjsj</p>
             </div>
+            <img class="icono " src="icons/lengua.png"/>
           </div>
-          <div class="card contenedorTarjeta bg-white bg-opacity-75" style="width: 20rem;">
+          <div class="card contenedorTarjeta RotarIzq" style="width: 20rem;">
             <img class="card-img-top imgCar" src="img/19.jpg" alt="Card image cap">
             <div class="card-body">
               <p class="card-text">y esta pq estaba extremadamente feliz!</p>
             </div>
+            <img class="icono " src="icons/FIN.png" style="border-radius: 2px;"/>
           </div>
-
-
-          
         </div>
         </div>
 
@@ -140,4 +156,7 @@
           <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </body>
+    <footer class="piePagina">
+      <h1>02/08/2023</h1>
+    </footer>
 </html>
