se añadieron colores de texto

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class="app">
             
-                <h1>Quieres ser mi San Valentín?</h1>
+                <h1 class="textoPregunta">Quieres ser mi San Valentín?</h1>
                 <div class="botones">
                     <button id="btnSi" class="btn">SÍ</button>
                     <button id="btnNo" class="posicion1 btn">NO</button>
