--- a/acepto.html
+++ b/acepto.html
@@ -9,7 +9,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     </head>
     <body class="bodyAcepto">
-        <div class="app">
+        <div class="app cuadroMorado">
             <h1>TE AMO</h1>
             <p>Feliz Día de San Valentín Corazón</p>
         </div>
